feat(db): remove db conn pool

--- a/env.example
+++ b/env.example
@@ -1,8 +1,9 @@
 APP_CODE=union-api
 APP_SECRET=union-api
 BACKEND_URL=https://dev-api.example.com
-BACKEND_HOST=dev-api.example.com
+ALLOWED_HOSTS=dev-api.example.com
 FRONTEND_URL=https://dev.example.com
+CORS_ORIGIN_WHITELIST=https://dev.example.com
 DB_NAME=union-api
 DB_USER=union-api
 DB_PASSWORD=
