feat(home): add change language api

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,9 @@ APP_REDIS_PASSWORD=
 APP_REDIS_DB=0
 # Api
 APP_API_ADDR=0.0.0.0:8000
+APP_API_COOKIE_DOMAIN=
+APP_API_COOKIE_SECURE=true
+APP_API_COOKIE_HTTP_ONLY=true
 # Cron
 APP_CRON_WORKER_CONCURRENCY=1
 APP_CRON_WORKER_QUEUES={"default": 1}
@@ -29,6 +32,3 @@ APP_CRON_WORKER_SHUTDOWN_TIMEOUT=60
 APP_ACCOUNT_EMAIL_DOMAIN=example.com
 APP_ACCOUNT_AUTH_TOKEN_TIMEOUT=604800
 APP_ACCOUNT_AUTH_TOKEN_COOKIE_NAME=auth-token
-APP_ACCOUNT_AUTH_TOKEN_COOKIE_DOMAIN=
-APP_ACCOUNT_AUTH_TOKEN_COOKIE_SECURE=true
-APP_ACCOUNT_AUTH_TOKEN_COOKIE_HTTPONLY=true
