chore(repo): add image build workflow

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,8 @@ APP_MYSQL_CONN_MAX_LIFETIME=3600
 APP_REDIS_ADDR=127.0.0.1:6379
 APP_REDIS_PASSWORD=
 APP_REDIS_DB=0
+# Build In Trace
+APP_TRACE_ENDPOINT=127.0.0.1:4317
 # Api
 APP_API_ADDR=0.0.0.0:8000
 APP_API_COOKIE_DOMAIN=
