feat(trace): trace toggle

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,7 @@ APP_REDIS_ADDR=127.0.0.1:6379
 APP_REDIS_PASSWORD=
 APP_REDIS_DB=0
 # Build In Trace
+APP_ENABLE_TRACE=true
 APP_TRACE_ENDPOINT=127.0.0.1:4317
 # Api
 APP_API_ADDR=0.0.0.0:8000
