--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+permissions:
+  contents: read
+
 jobs:
   pylint:
     name: Pylint
@@ -26,6 +29,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install pylint
           pip install -r requirements.txt
+      - name: Django Check
+        run: |
+          cp env.example .env
+          python manage.py check
       - name: Analysing the code with pylint
         run: |
           make pylint
